--- a/Public/Css/bootstrap.css
+++ b/Public/Css/bootstrap.css
@@ -160,7 +160,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif,"微软雅黑";
+  font-family:"微软雅黑";
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -962,7 +962,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "微软雅黑";
 }
 
 label {
@@ -4318,7 +4318,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-search .search-query {
   padding: 4px 14px;
   margin-bottom: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "微软雅黑";
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
